test/fail/navigate-to-template.app
//#2 There is no page with signature

application test

  define page root() {
    navigate(bla()){""}
    navigate(bla1()){""}
  }
  
  define bla(){}
  define ajax bla1(){}